# models/catalog.go
@@ -1,81 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	strfmt "github.com/go-openapi/strfmt"
-
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/swag"
-)
-
-// Catalog catalog
-// swagger:model Catalog
-
-type Catalog struct {
-
-	// category
-	Category *Category `json:"category,omitempty"`
-
-	// subcategories
-	Subcategories SubCategories `json:"subcategories"`
-}
-
-/* polymorph Catalog category false */
-
-/* polymorph Catalog subcategories false */
-
-// Validate validates this catalog
-func (m *Catalog) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.validateCategory(formats); err != nil {
-		// prop
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *Catalog) validateCategory(formats strfmt.Registry) error {
-
-	if swag.IsZero(m.Category) { // not required
-		return nil
-	}
-
-	if m.Category != nil {
-
-		if err := m.Category.Validate(formats); err != nil {
-			if ve, ok := err.(*errors.Validation); ok {
-				return ve.ValidateName("category")
-			}
-			return err
-		}
-	}
-
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *Catalog) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *Catalog) UnmarshalBinary(b []byte) error {
-	var res Catalog
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
