# models/description.go
@@ -1,81 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	strfmt "github.com/go-openapi/strfmt"
-
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/swag"
-)
-
-// Description description
-// swagger:model Description
-
-type Description struct {
-
-	// descriptors
-	Descriptors Descriptors `json:"descriptors"`
-
-	// detail
-	Detail *Detail `json:"detail,omitempty"`
-}
-
-/* polymorph Description descriptors false */
-
-/* polymorph Description detail false */
-
-// Validate validates this description
-func (m *Description) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.validateDetail(formats); err != nil {
-		// prop
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *Description) validateDetail(formats strfmt.Registry) error {
-
-	if swag.IsZero(m.Detail) { // not required
-		return nil
-	}
-
-	if m.Detail != nil {
-
-		if err := m.Detail.Validate(formats); err != nil {
-			if ve, ok := err.(*errors.Validation); ok {
-				return ve.ValidateName("detail")
-			}
-			return err
-		}
-	}
-
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *Description) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *Description) UnmarshalBinary(b []byte) error {
-	var res Description
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
